KAFKA-5077 fix GC logging arguments for Java 9