@@ -245,7 +245,12 @@ GC_FILE_SUFFIX='-gc.log'
 GC_LOG_FILE_NAME=''
 if [ "x$GC_LOG_ENABLED" = "xtrue" ]; then
   GC_LOG_FILE_NAME=$DAEMON_NAME$GC_FILE_SUFFIX
-  KAFKA_GC_LOG_OPTS="-Xloggc:$LOG_DIR/$GC_LOG_FILE_NAME -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps "
+  JAVA_VERSION=$($JAVA -version 2>&1 | sed -n 's/.* version "\(.*\)"/\1/p')
+  if [[ ! "$JAVA_VERSION" < "9" ]] ; then
+    KAFKA_GC_LOG_OPTS+="-Xlog:gc*:$LOG_DIR/$GC_LOG_FILE_NAME:time,tags "
+  else
+    KAFKA_GC_LOG_OPTS+="-verbose:gc -Xloggc:$LOG_DIR/$GC_LOG_FILE_NAME -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps "
+  fi
 fi
 
 # If Cygwin is detected, classpath is converted to Windows format.
